<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentInstructions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splashBackgroundColor"
    tools:context=".Activities.InstructionsActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvInstructions"
        android:layout_width="409dp"
        android:layout_height="465dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarInstructions" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/backgroundColor"
        android:backgroundTint="@color/colorToolbar"
        android:fontFamily="@font/roboto"
        android:text="@string/ingredients_button_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></Button>

    <include
        android:id="@+id/toolbarInstructions"
        layout="@layout/add_toolbar"></include>

    <ImageView
        android:id="@+id/ivCookingPotSmall3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/cooking_pot_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cooking_pot_medium" />

    <ImageView
        android:id="@+id/ivMeasuringCup"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="55dp"
        android:contentDescription="@string/recipe_book_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/toolbarHome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/measuring_cup" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/btnAddInstruction"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/instruction_step_hint_text"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnDone"
        app:layout_constraintEnd_toStartOf="@+id/btnAddInstruction"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/instruction_hint_text"
            android:textColorHint="@color/pink"
            tools:layout_editor_absoluteX="-6dp"
            tools:layout_editor_absoluteY="450dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorToolbar"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        android:tint="@color/white"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toTopOf="@+id/btnDone"
        app:layout_constraintEnd_toEndOf="parent">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.constraintlayout.widget.ConstraintLayout>