<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:contentPaddingBottom="6dp"
        app:contentPaddingLeft="6dp"
        app:contentPaddingRight="6dp"
        app:contentPaddingTop="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/ivDish"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/poffertjes" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingTop="25dp">

                <TextView
                    android:id="@+id/tvRecipeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/georgia"
                    android:text="@string/recipe_name_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/black"
                    android:textSize="17dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="4dp">

                    <ImageView
                        android:id="@+id/ivClock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_clock" />

                    <TextView
                        android:id="@+id/tvServingTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:paddingLeft="5dp"
                        android:paddingTop="2dp"
                        android:paddingRight="5dp"
                        android:text="@string/recipe_serving_time_text"
                        android:textColor="@color/colorToolbar" />

                    <ImageView
                        android:id="@+id/ivServingAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        app:srcCompat="@drawable/ic_person" />

                    <TextView
                        android:id="@+id/tvServingAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:paddingLeft="5dp"
                        android:paddingTop="2dp"
                        android:paddingRight="5dp"
                        android:text="@string/recipe_serving_amount_text"
                        android:textColor="@color/colorToolbar" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/ivFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    app:srcCompat="@drawable/ic_favorite" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>